# zeobot

./: .gitignore  Aptfile  Pipfile  README.md  app.json  app.py  pyproject.toml  requirements.txt  run.sh
config/: config.ini
src/: app.py
src/config/: config.ini
src/data/: Ruby.db
src/utils/: buildinfo.py  config.py
src/zeobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
